# onelogin-python-aws-assume-role

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  onelogin.aws.json.template  pyproject.toml
.github/workflows/: lint.yml  version-bump.yml
src/aws_assume_role/: __init__.py  accounts.py  aws_assume_role.py  version.py  writer.py
